# wholeproject

./: .gitignore  README.md  start_all.ps1
backend/: README.md  config.py  main.py  models.py  openssl.cfg  pyproject.toml  run.ps1  test_db.py
backend/app/: __init__.py  auth.py  config.py  database.py  firebase.py  models.py
backend/app/routes/: __init__.py  auth_routes.py  user_routes.py
backend/app/services/: __init__.py  session_service.py  user_service.py
backend/routers/: __init__.py  auth.py  quiz.py
frontend-react/: index.html  package-lock.json  package.json  ts_errors.txt
frontend-react/src/: App.css  App.tsx  index.css
frontend-react/src/components/: Auth.tsx  BMICalculator.tsx  Chatbot.tsx  Dashboard.tsx  Explainer.tsx  FoodChecker.tsx  HomePage.tsx  Landing.tsx  ParticleBackground.tsx  Quiz.tsx  Result.tsx  extra.css
frontend-react/src/context/: AppContext.tsx
frontend-react/src/data/: foodDb.ts  i18n.ts  icons.ts  prakriti.ts
frontend-react/src/lib/: api.ts  firebase.ts
